--- a/index.html
+++ b/index.html
@@ -1,22 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head><title>Homepage</title></head>
-<body bgcolor="black">
-<div style="text-align:left">
-<div style="text-align:right;float:right">
-<div id="datetime" style="color:white"></div>
-<script>
-    function displayDateTime() {
-      const now = new Date();
-      const datetimeString = now.toLocaleString();
-      document.getElementById("datetime").innerText = datetimeString;
-    }
+<head><title>a</title></head>
+<frameset cols="103,*">
+<frame src="file:///C:/Users/duals/Desktop/menu.html" MARGINWIDTH="0" MARGINHEIGHT="4" FRAMEBORDER="1"></frame>
+<frame src="file:///C:/Users/duals/Desktop/main.html" name="cont" FRAMEBORDER="1"></frame>
+</frameset>
 
-    displayDateTime();
-    setInterval(displayDateTime, 1000);
-  </script>
-</div><h1 style="color:lime">T_M's website</div>
-<hr>
-<
-</body>
-</html>
