--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>a</title></head>
 <frameset cols="103,*">
-<frame src="file:///C:/Users/duals/Desktop/menu.html" MARGINWIDTH="0" MARGINHEIGHT="4" FRAMEBORDER="1"></frame>
-<frame src="file:///C:/Users/duals/Desktop/main.html" name="cont" FRAMEBORDER="1"></frame>
+<frame src="https://github.com/tkmmysk/00/blob/main/menu.html" MARGINWIDTH="0" MARGINHEIGHT="4" FRAMEBORDER="1"></frame>
+<frame src="https://github.com/tkmmysk/00/blob/main/index.html" name="cont" FRAMEBORDER="1"></frame>
 </frameset>
 
